@@ -15,6 +15,7 @@
 
 1.3 @
   Support for an irker.conf file to set irkerhook variables under Subversion.
+  Color highlighting of notification fields can be enabled. 
   irkerhook.py now has its own manual page.
   Added channelmax variable for rate-limiting
 
